fix spacing to be more consistent

--- a/src/styles/features/features.scss
+++ b/src/styles/features/features.scss
@@ -32,7 +32,7 @@
     width: 100%;
 
     + .section {
-      margin-top: 90px;
+      margin-top: 60px;
     }
   }
 
@@ -42,7 +42,7 @@
     margin: 0 auto;
 
     + .figure {
-      margin-top: 60px;
+      margin-top: 45px;
     }
   }
 
